# arcade-api

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.py  debug_king_moves.py  debug_king_promotion.py  game_abc.py  game_manager.py  game_state_manager.py  pyproject.toml  pytest_collection_report.txt  requirements-dev.txt  requirements.txt  run_test.py  run_tests.py  setup.cfg  shogi_test_report.txt  temp_shogi_debug.py  test_game_loading.py  test_output.txt
.github/workflows/: ci.yml
docs/games/battleship/: README.md
docs/games/big2/: README.md
docs/games/blackjack/: README.md
docs/games/bs/: README.md
docs/games/catan/: README.md
docs/games/checkers/: README.md
docs/games/chess/: README.md
docs/games/concentration/: README.md
docs/games/connect-four/: README.md
docs/games/connect6/: README.md
docs/games/crazy8s/: README.md
docs/games/cuttle/: README.md
docs/games/daifugo/: README.md
docs/games/gin_rummy/: README.md
docs/games/go/: README.md
docs/games/gofish/: README.md
docs/games/hanafuda/: README.md
docs/games/hangman/: README.md
docs/games/jaipur/: README.md
docs/games/mancala/: README.md
docs/games/uno/: README.md
games/: battleship.py  big2.py  blackjack.py  bs.py  catan.py  checkers.py  chess.py  concentration.py  connect6.py  connect_four.py  crazy8s.py  cuttle.py  daifugo.py  gin_rummy.py  go.py  gofish.py  hanafuda.py  hangman.py  jaipur.py  mancala.py  omok.py  onitama.py  othello.py  poker.py  scrabble.py  shogi.py  tic_tac_toe.py  tictactoe3d.py  tienlen.py  uno.py  war.py
games/battleship/: battleship.py
games/big2/: big2.py
games/blackjack/: __init__.py
games/bs/: bs.py
games/catan/: catan.py
games/checkers/: checkers.py
games/chess/: __init__.py
games/concentration/: concentration.py
games/connect6/: connect6.py
games/connect_four/: __init__.py
games/crazy8s/: crazy8s.py
games/cuttle/: __init__.py
games/daifugo/: daifugo.py
games/gin_rummy/: gin_rummy.py
games/go/: go.py
games/gofish/: gofish.py
games/hanafuda/: hanafuda.py
games/hangman/: hangman.py
games/jaipur/: jaipur.py
games/mancala/: mancala.py
games/omok/: __init__.py
games/onitama/: onitama.py
games/othello/: othello.py
games/poker/: poker.py
games/scrabble/: scrabble.py
games/shogi/: __init__.py
games/tic_tac_toe/: __init__.py
games/tictactoe3d/: tictactoe3d.py
games/tienlen/: tienlen.py
games/uno/: uno.py
games/war/: __init__.py
scripts/: generate_tests.py  run_test_case.py
tests/: base_test.py  conftest.py  helpers.py  test_battleship.py  test_big2.py  test_blackjack.py  test_bs.py  test_catan.py  test_checkers.py  test_chess.py  test_concentration.py  test_connect6.py  test_connect_four.py  test_crazy8s.py  test_cuttle.py  test_daifugo.py  test_gin_rummy.py  test_go.py  test_gofish.py  test_hanafuda.py  test_hangman.py  test_jaipur.py  test_mancala.py  test_omok.py  test_onitama.py  test_othello.py  test_poker.py  test_scrabble.py  test_shogi.py  test_tic_tac_toe.py  test_tic_tac_toe_extra.py  test_tictactoe3d.py  test_tienlen.py  test_uno.py  test_war.py
tests/templates/: test_game_template.py
(+10 files in other folders)
