[metadata]
name = game-arcade-api
version = 0.1.0
description = A RESTful API for playing various board and card games
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/game-arcade-api
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    pydantic>=1.8.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pytest-mock>=3.10.0

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0

[flake8]
max-line-length = 88
extend-ignore =
    E203,  # whitespace before ':' (conflicts with black)
    W503,  # line break before binary operator (conflicts with black)
    E501,  # line too long (handled by black)
    E266,  # too many leading '#' for block comment
    E800,  # Found commented out code
    N802,  # function name should be lowercase (we use camelCase in some places)
    N806,  # variable in function should be lowercase (we use camelCase in some places)
    N813  # camelcase imported as lowercase (we use camelCase in some places)
per-file-ignores =
    # Ignore import errors in __init__.py files
    __init__.py: F401
    # Ignore line too long in tests
    tests/*.py: E501
    # Ignore unused imports in __init__.py
    **/__init__.py: F401
    # Ignore line too long in docstrings
    *.py: W505
